# UAccountings

./: CMakeLists.txt  README.md  build_defs.h  main.cpp  main.qml  resources.qrc
classes/: datapipe.cpp  datapipe.h  macro.h  qmlcellproperty.cpp  qmlcellproperty.h  qmldefaults.h  qmlsql.cpp  qmlsql.h  qmlsqlmodel.cpp  qmlsqlmodel.h  qmlsqlquery.cpp  qmlsqlquery.h  qmlsqltable.cpp  qmlsqltable.h  qmltreeelement.cpp  qmltreeelement.h  qmltreemodel.cpp  qmltreemodel.h  qmltypes.h  uatable.cpp  uatable.h
defaults/: settings.ini  variables.txt
delegates/: CellBackground.qml  CellBase.js  CellBase.qml  CellBaseEditor.qml  CellBool.qml  CellColor.qml  CellColorEditor.qml  CellDelegate.qml  CellList.qml  CellNumber.qml  CellNumberEditor.qml  CellText.qml  CellTextEditor.qml  HeaderDelegate.qml
modules/: Template.qml  Tests.qml
qml/: Database.qml
qmlets/: DrawerItem.qml  FieldString.qml  FieldTitle.qml
scripts/: init.js
store/: main.qml  qtquickcontrols2.conf
store/delegates/: CellAdd.qml  CellBase.qml  CellBool.qml  CellData.qml  CellEmpty.qml  CellNumeric.qml  CellService.qml  CellString.qml  CellTotals.qml  DrawerItem.qml  FieldBase.qml  FieldBool.qml  FieldLookup.qml  FieldNumeric.qml  FieldString.qml  FieldTitle.qml  HeaderDelegate.qml  SellSelected.qml
store/init/: init.js  menu.json
store/modules/: Table.qml  Template.qml
store/qml/: Contractors.qml  Goods.qml  Groups.qml
store/templates/: TableEditor.qml
